# web-fetch

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: container.yml
web_fetch/: cli.py  fetcher.py  html_parser.py
