[tool.poetry]
name = "web-fetch"
version = "0.1.0"
description = ""
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
readme = "README.md"
packages = [{include = "web_fetch"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"

[tool.poetry.scripts]
web-fetch = "web_fetch.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
